[package]
name = "beancount-sort"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = ">=0.4.14"
regex = ">=1.5.4"
structopt = ">=0.3.22"
anyhow = ">=1.0.43"
chrono = "0.4.19"
derivative = ">=2.2.0"
